OMS/k8s/oms-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: oms
  name: oms-server-service
spec:
  selector:
    app: oms-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
