OMS/k8s/oms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: oms # Set the namespace to "oms"
spec:
  rules:
    - host: ae73adf0061dc4d49ab515bf812150d9-1090975536.eu-central-1.elb.amazonaws.com
      http:
        paths:
          - path: /oms(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: oms-client-service
                port:
                  number: 80
          - path: /oms/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: oms-server-service
                port:
                  number: 5000
